[package]
name = "mm-decoder"
version = "0.2.0"
edition = "2024"
authors = ["Ava Wolfe <ava.codie.wolfe@gmail.com>"]
description = "A no-std Rust crate for decoding Märklin-Motorola protocol"
license = "MIT"
repository = "https://github.com/slonket/mm-decoder"
readme = "README.md"
keywords = ["marklin", "motorola", "decoder", "no-std", "embedded"]
categories = ["no-std", "embedded", "hardware-support"]